# Parrot

./: .dockerignore  .env.example  .gitignore  README.md  SECURITY.md  biome.json  package.json  pnpm-lock.yaml  vercel.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish-images.yml
apps/web/: .npmrc  AGENTS.md  README.md  design-qa.md  index.html  package.json  vercel.json  vite.config.mjs
docs/audits/: object-storage-integration-review.md  production-integration-audit-2026-07-12.md  repository-audit.md  security-best-practices-report.md  slic-threat-model.md  workos-browser-auth-architecture.md
docs/decisions/: 0001-system-architecture.md  0002-auth-and-authorization.md  0003-realtime-reliability.md  0004-agent-runtime.md  0005-files-and-search.md  0006-notifications.md  feature-decisions.md  initial-information-architecture.md
infra/: README.md  compose.yaml
scripts/: build-spacetimedb-production.sh  generate-db-bindings.sh  install-binaryen.sh  install-node.sh  install-spacetime-cli.sh  job-envelope-contract.ts  normalize-generated-bindings.mjs  smoke-deployed-shared-object-store.mjs  test-job-envelope-contract.sh  test-production-bootstrap-guard.sh  test-shared-object-store-contract.mjs  test-spacetime-oidc.sh  test-spacetime-smoke.sh  tsconfig.job-envelope.json  validate-production-bootstrap-env.mjs  verify-gateway-package.sh  verify-infra.sh  verify-no-secrets.sh  verify-rejected-identifiers.sh  verify-toolchain.sh
spacetimedb/: Cargo.toml  README.md
spacetimedb/src/: authz.rs  lib.rs  model.rs  policy.rs  reducers.rs  views.rs
(+135 files in other folders)
