[package]
name = "project-conversation-spacetimedb"
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
spacetimedb = { version = "=2.6.1", optional = true }
serde_json = { version = "=1.0.150", optional = true }
blake3 = "=1.8.2"

[features]
default = ["module"]
module = ["dep:spacetimedb", "dep:serde_json"]

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = "symbols"
